<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentPanel"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    tools:context=".MainActivity">
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:progressTint="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/half_default_margin"
        android:paddingEnd="@dimen/half_default_margin"
        android:text="@string/demo_description"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"/>

    <LinearLayout
        android:layout_width="0dp"
        android:id="@+id/verticalPanel"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/state">

        <EditText
            android:id="@+id/userVault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:textColor="@android:color/darker_gray"
            android:cursorVisible="false"
            android:enabled="false"/>



        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/cardNumberFieldLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            app:hint="@string/card_number"
            android:layout_marginEnd="@dimen/default_margin">

            <com.verygoodsecurity.vgscollect.widget.VGSCardNumberEditText
                android:id="@+id/cardNumberField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:numberDivider=" "
                android:paddingLeft="@dimen/half_default_margin"
                app:fieldName="card_data.cardNumber"
                app:isRequired="false"
                app:textColor="@color/black"
                app:singleLine="true"
                app:textSize="12dp"
                app:text="4111111111111111"
                app:cardBrandIconGravity="end"/>
        </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>


        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/cardCVCFieldLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:hint="@string/cvc">
            <com.verygoodsecurity.vgscollect.widget.CardVerificationCodeEditText
                android:id="@+id/cardCVCField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:fieldName="card_data.cardCvc"
                app:inputType="textPassword"
                app:textColor="@color/black"
                android:paddingLeft="@dimen/half_default_margin"
                app:isRequired="true"
                app:singleLine="true"
                app:textSize="12dp"
                app:text="123"/>
        </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>
        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/cardHolderFieldLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:hint="@string/card_holder">
            <com.verygoodsecurity.vgscollect.widget.PersonNameEditText
                android:id="@+id/cardHolderField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:fieldName="card_data.personal_data.cardHolder"
                app:textColor="@color/black"
                app:singleLine="true"
                android:paddingLeft="@dimen/half_default_margin"
                app:inputType="text"
                app:isRequired="true"
                app:textSize="12dp"
                app:text="John Galt"/>
        </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>
        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/cardExpDateFieldLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconModes="clear_text"
            app:endIconTint="@color/colorAccent"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:hint="@string/exp_date">
            <com.verygoodsecurity.vgscollect.widget.ExpirationDateEditText
                android:id="@+id/cardExpDateField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:fieldName="card_data.personal_data.secret.expDate"
                app:textColor="@color/black"
                app:textSize="12dp"
                android:paddingLeft="@dimen/half_default_margin"
                app:singleLine="true"
                app:isRequired="true"
                app:datePickerModes="calendar"/>
        </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin">
            <ImageButton
                android:id="@+id/submitBtn"
                android:src="@android:drawable/ic_menu_send"
                android:tint="@color/colorPrimary"
                android:tintMode="src_in"
                android:layout_weight="1"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"/>
            <ImageButton
                android:id="@+id/attachFileBtn"
                android:tintMode="src_in"
                android:layout_weight="1"
                android:src="@android:drawable/stat_sys_upload"
                android:tint="@color/colorPrimary"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"/>
            <ImageButton
                android:id="@+id/scanCardIOBtn"
                android:layout_weight="1"
                android:tint="@color/colorPrimary"
                android:tintMode="src_in"
                android:src="@android:drawable/ic_menu_camera"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/state"
        android:layout_width="160dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/verticalPanel">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="@dimen/default_margin">
            <TextView
                android:id="@+id/titleHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingBottom="@dimen/half_default_margin"
                android:text="STATE: "/>
            <ImageView
                android:id="@+id/cardIcon"
                android:layout_width="30dp"
                android:visibility="gone"
                android:layout_height="30dp"/>
            <TextView
                android:id="@+id/responseView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="12dp"
                android:text="no data"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>