...
                            android:layout_weight="1"
                            android:paddingEnd="@dimen/margin_padding_material_small"
                            android:textColor="#5D6A7A"
                            android:textSize="10dp" />

                        <TextView
                            android:id="@+id/responseContainerView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="#5D6A7A"
                            android:textSize="10dp" />
                    </LinearLayout>
...
